// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Student Dashboard displays as loading 1`] = `
.c7 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

.c11 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
  border-radius: 50%;
  padding: 2px;
  height: 1.125em;
  width: 1.125em;
  background: #5e5e5e;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 a {
  font-weight: 600;
}

.c14 {
  height: 100%;
  width: 4rem;
  margin-right: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 6rem 0 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 i {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 20rem;
  padding-right: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 15.5rem;
  padding-right: 1rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-right: 1rem;
  width: 8rem;
}

.c6 svg.fa-star {
  padding: 3px;
}

.c1 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
}

.c9 {
  width: 1.4rem;
  height: 1.4rem;
  min-width: 1.4rem;
  min-height: 1.4rem;
  background: #009670;
  color: #fff;
  font-size: 0.9rem;
  line-height: 1.4rem;
  border-radius: 50%;
  text-align: center;
  vertical-align: middle;
}

.c12 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
  background: white;
  border-top: 2px solid #f1f1f1;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c13 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
  display: contents;
  color: #424242;
}

.c13:hover {
  color: #424242;
}

.c3 {
  font-weight: 600;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 1.1rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-top: 1rem;
  --gap-top: 5px;
  --gap-bottom: 12px;
  margin: calc(-1 * var(--gap-top)) 0 0 calc(-1 * var(--gap-bottom));
  width: calc(100% + var(--gap));
}

.c8 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin: var(--gap-top) 0 0 var(--gap-bottom);
}

.c8 > div .extension-icon,
.c8 > div svg {
  margin-top: 2px;
}

.c10 {
  margin-right: 0.5rem;
  min-width: 12px;
  min-height: 12px;
  width: 12px;
  height: 12px;
  font-size: 0.8rem;
  line-height: 1.2rem;
}

.c0 > div {
  margin-top: 25px;
}

@media (max-width:600px) {
  .c2 {
    min-width: 100%;
  }
}

@media (max-width:600px) {
  .c4 {
    padding-left: 1.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:600px) {
  .c12.c12.c12 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    max-height: none;
  }
}

@media (max-width:999px) {
  .c12.c12.c12 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    max-height: none;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="student-dashboard"
      >
        <div
          className="openstax-notifications-bar"
        />
        <div
          className="course-title-banner"
          data-appearance="testing"
          data-book-title="Testing"
          data-is-preview={false}
          data-term="Spring 2017"
          data-title="Local Test Course One"
        >
          <div
            className="book-title"
          >
            <h1
              className="book-title-text"
            >
              Local Test Course One
            </h1>
          </div>
          <div
            className="course-term"
          >
            Spring 2017
          </div>
        </div>
        <div
          className="container"
          data-tour-region-id="student-dashboard"
        >
          <div
            className="row"
          >
            <nav
              className="tutor-tabs student-dashboard-tabs"
              data-test-id="tabs"
            >
              <ul
                className="nav nav-tabs"
                role="tablist"
              >
                <li
                  aria-selected={true}
                  className="active"
                  role="tab"
                >
                  <a
                    data-test-id="this-week-tab"
                    href="#"
                    onClick={[Function]}
                  >
                    <h2>
                      This Week
                    </h2>
                  </a>
                </li>
                <li
                  aria-selected={false}
                  className=""
                  role="tab"
                >
                  <a
                    data-test-id="all-past-work-tab"
                    href="#"
                    onClick={[Function]}
                  >
                    <h2>
                      All Past Work
                    </h2>
                  </a>
                </li>
              </ul>
            </nav>
          </div>
          <div
            className="c0 row"
          >
            <div
              className="col-lg-9 col-12"
            >
              <div
                className="tab-pane active"
                role="tabpanel"
              >
                <div
                  className="-this-week card"
                >
                  <div
                    className="c1"
                  >
                    <div
                      className="sc-fznZeY c2"
                    >
                      <span
                        className="c3 date-range"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Oct 14, 2015
                        </time>
                        <span>
                           – 
                        </span>
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Oct 14, 2015
                        </time>
                      </span>
                    </div>
                    <div
                      className="sc-fznZeY c4"
                    >
                      Due on
                    </div>
                    <div
                      className="sc-fznZeY c5"
                    >
                      Status
                    </div>
                    <div
                      className="sc-fznZeY c6"
                    >
                      Scores
                    </div>
                  </div>
                  <div
                    className="empty pending card"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-spinner fa-w-16 fa-spin c7 ox-icon ox-icon-spinner"
                      data-icon="spinner"
                      data-prefix="fas"
                      data-variant="activity"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Preparing assignments for your course.  This can take up to 10 minutes.
                  </div>
                </div>
                <div
                  className="c8"
                >
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-exclamation-circle fa-w-16 c7 ox-icon ox-icon-exclamation-circle"
                        color="#f4d019"
                        data-icon="exclamation-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                    </div>
                     
                    <span>
                      Due soon
                    </span>
                  </div>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-clock fa-w-16 c7 ox-icon ox-icon-clock"
                        color="#c2002f"
                        data-icon="clock"
                        data-prefix="far"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                    </div>
                     
                    <span>
                      Late work
                    </span>
                  </div>
                  <div>
                    <div>
                      <div
                        className="c9 extension-icon c10"
                      >
                        E
                      </div>
                    </div>
                     
                    <span>
                      Extension
                    </span>
                  </div>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        background="#5e5e5e"
                        className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                        color="white"
                        data-icon="star"
                        data-prefix="fas"
                        data-variant="circledStar"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                    </div>
                     
                    <span>
                      Provisional score. Final scores will be available when published by your instructor.
                    </span>
                  </div>
                </div>
                <div
                  className="upcoming card"
                >
                  <div
                    className="c1"
                  >
                    <div
                      className="sc-fznZeY c2"
                    >
                      <span
                        className="title"
                      >
                        Coming Up
                      </span>
                    </div>
                    <div
                      className="sc-fznZeY c4"
                    >
                      Due on
                    </div>
                    <div
                      className="sc-fznZeY c5"
                    >
                      Status
                    </div>
                    <div
                      className="sc-fznZeY c6"
                    >
                      Scores
                    </div>
                  </div>
                  <div
                    aria-label="Work on event: killer implement channels"
                    className="c12 task event"
                    data-event-id={7}
                    href="/course/1/task/7"
                    tabIndex={-1}
                  >
                    <a
                      className="c13"
                      href="/course/1/task/7"
                      onClick={[Function]}
                    >
                      <div
                        className="sc-fznZeY c2"
                      >
                        <i
                          className="c14 icon-event"
                          type="event"
                        />
                        <span>
                          killer implement channels
                        </span>
                      </div>
                      <div
                        className="sc-fznZeY c4"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Wed, Oct 14, 12:00am
                        </time>
                      </div>
                      <div
                        className="sc-fznZeY c5"
                      >
                        <div
                          className="c15"
                        >
                          <span
                            className="tour-anchor"
                            data-tour-anchor-id="assignment-progress-status"
                          >
                            
                          </span>
                        </div>
                      </div>
                    </a>
                    <div
                      className="sc-fznZeY c6"
                    >
                      <div
                        className="c15"
                      >
                        <a
                          href="/course/1/gradebook"
                          onClick={[Function]}
                        >
                          2.0
                        </a>
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-label="Work on external: 24/365 benchmark mindshare"
                    className="c12 task external"
                    data-event-id={6}
                    href="/course/1/task/6"
                    tabIndex={-1}
                  >
                    <a
                      className="c13"
                      href="/course/1/task/6"
                      onClick={[Function]}
                    >
                      <div
                        className="sc-fznZeY c2"
                      >
                        <i
                          className="c14 icon-external"
                          type="external"
                        />
                        <span>
                          24/365 benchmark mindshare
                        </span>
                      </div>
                      <div
                        className="sc-fznZeY c4"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Wed, Oct 14, 12:00am
                        </time>
                      </div>
                      <div
                        className="sc-fznZeY c5"
                      >
                        <div
                          className="c15"
                        >
                          <span
                            className="tour-anchor"
                            data-tour-anchor-id="assignment-progress-status"
                          >
                            Not started
                          </span>
                        </div>
                      </div>
                    </a>
                    <div
                      className="sc-fznZeY c6"
                    >
                      <div
                        className="c15"
                      >
                        <a
                          href="/course/1/gradebook"
                          onClick={[Function]}
                        >
                          0
                        </a>
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-label="Work on homework: efficient streamline vortals"
                    className="c12 task homework"
                    data-event-id={8}
                    href="/course/1/task/8"
                    tabIndex={-1}
                  >
                    <a
                      className="c13"
                      href="/course/1/task/8"
                      onClick={[Function]}
                    >
                      <div
                        className="sc-fznZeY c2"
                      >
                        <i
                          className="c14 icon-homework"
                          type="homework"
                        />
                        <span>
                          efficient streamline vortals
                        </span>
                      </div>
                      <div
                        className="sc-fznZeY c4"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Wed, Oct 14, 12:00am
                        </time>
                      </div>
                      <div
                        className="sc-fznZeY c5"
                      >
                        <div
                          className="c15"
                        >
                          <span
                            className="tour-anchor"
                            data-tour-anchor-id="assignment-progress-status"
                          >
                            1/3 completed
                          </span>
                        </div>
                      </div>
                    </a>
                    <div
                      className="sc-fznZeY c6"
                    >
                      <div
                        className="c15"
                      >
                        <a
                          href="/course/1/gradebook"
                          onClick={[Function]}
                        >
                          4.0
                        </a>
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-label="Work on reading: B2C deploy convergence"
                    className="c12 task reading"
                    data-event-id={5}
                    href="/course/1/task/5"
                    tabIndex={-1}
                  >
                    <a
                      className="c13"
                      href="/course/1/task/5"
                      onClick={[Function]}
                    >
                      <div
                        className="sc-fznZeY c2"
                      >
                        <i
                          className="c14 icon-reading"
                          type="reading"
                        />
                        <span>
                          B2C deploy convergence
                        </span>
                      </div>
                      <div
                        className="sc-fznZeY c4"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Wed, Oct 14, 12:00am
                        </time>
                      </div>
                      <div
                        className="sc-fznZeY c5"
                      >
                        <div
                          className="c15"
                        >
                          <span
                            className="tour-anchor"
                            data-tour-anchor-id="assignment-progress-status"
                          >
                            In progress
                          </span>
                        </div>
                      </div>
                    </a>
                    <div
                      className="sc-fznZeY c6"
                    >
                      <div
                        className="c15"
                      >
                        <a
                          href="/course/1/gradebook"
                          onClick={[Function]}
                        >
                          3.0
                        </a>
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sidebar col-lg-3 col-12"
            >
              <div
                className="actions-box loadable is-loading"
              >
                Loading progress information...
              </div>
              <div
                className="actions-box browse-the-book card"
              >
                <a
                  aria-label="Browse course reference book"
                  className="browse-the-book"
                  data-appearance="testing"
                  href="/book/1"
                  onClick={[Function]}
                  target="_blank"
                >
                  <div>
                    Browse the Book
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: [teacher,teacher-not-previewed]; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Student Dashboard matches snapshot 1`] = `
.c7 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

.c11 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
  border-radius: 50%;
  padding: 2px;
  height: 1.125em;
  width: 1.125em;
  background: #5e5e5e;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 a {
  font-weight: 600;
}

.c14 {
  height: 100%;
  width: 4rem;
  margin-right: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 6rem 0 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 i {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 20rem;
  padding-right: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 15.5rem;
  padding-right: 1rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-right: 1rem;
  width: 8rem;
}

.c6 svg.fa-star {
  padding: 3px;
}

.c1 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
}

.c9 {
  width: 1.4rem;
  height: 1.4rem;
  min-width: 1.4rem;
  min-height: 1.4rem;
  background: #009670;
  color: #fff;
  font-size: 0.9rem;
  line-height: 1.4rem;
  border-radius: 50%;
  text-align: center;
  vertical-align: middle;
}

.c12 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
  background: white;
  border-top: 2px solid #f1f1f1;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c13 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
  display: contents;
  color: #424242;
}

.c13:hover {
  color: #424242;
}

.c3 {
  font-weight: 600;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 1.1rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-top: 1rem;
  --gap-top: 5px;
  --gap-bottom: 12px;
  margin: calc(-1 * var(--gap-top)) 0 0 calc(-1 * var(--gap-bottom));
  width: calc(100% + var(--gap));
}

.c8 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin: var(--gap-top) 0 0 var(--gap-bottom);
}

.c8 > div .extension-icon,
.c8 > div svg {
  margin-top: 2px;
}

.c10 {
  margin-right: 0.5rem;
  min-width: 12px;
  min-height: 12px;
  width: 12px;
  height: 12px;
  font-size: 0.8rem;
  line-height: 1.2rem;
}

.c0 > div {
  margin-top: 25px;
}

@media (max-width:600px) {
  .c2 {
    min-width: 100%;
  }
}

@media (max-width:600px) {
  .c4 {
    padding-left: 1.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:600px) {
  .c12.c12.c12 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    max-height: none;
  }
}

@media (max-width:999px) {
  .c12.c12.c12 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    max-height: none;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="student-dashboard"
      >
        <div
          className="openstax-notifications-bar"
        />
        <div
          className="course-title-banner"
          data-appearance="testing"
          data-book-title="Testing"
          data-is-preview={false}
          data-term="Spring 2017"
          data-title="Local Test Course One"
        >
          <div
            className="book-title"
          >
            <h1
              className="book-title-text"
            >
              Local Test Course One
            </h1>
          </div>
          <div
            className="course-term"
          >
            Spring 2017
          </div>
        </div>
        <div
          className="container"
          data-tour-region-id="student-dashboard"
        >
          <div
            className="row"
          >
            <nav
              className="tutor-tabs student-dashboard-tabs"
              data-test-id="tabs"
            >
              <ul
                className="nav nav-tabs"
                role="tablist"
              >
                <li
                  aria-selected={true}
                  className="active"
                  role="tab"
                >
                  <a
                    data-test-id="this-week-tab"
                    href="#"
                    onClick={[Function]}
                  >
                    <h2>
                      This Week
                    </h2>
                  </a>
                </li>
                <li
                  aria-selected={false}
                  className=""
                  role="tab"
                >
                  <a
                    data-test-id="all-past-work-tab"
                    href="#"
                    onClick={[Function]}
                  >
                    <h2>
                      All Past Work
                    </h2>
                  </a>
                </li>
              </ul>
            </nav>
          </div>
          <div
            className="c0 row"
          >
            <div
              className="col-lg-9 col-12"
            >
              <div
                className="tab-pane active"
                role="tabpanel"
              >
                <div
                  className="-this-week card"
                >
                  <div
                    className="c1"
                  >
                    <div
                      className="sc-fznZeY c2"
                    >
                      <span
                        className="c3 date-range"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Oct 14, 2015
                        </time>
                        <span>
                           – 
                        </span>
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Oct 14, 2015
                        </time>
                      </span>
                    </div>
                    <div
                      className="sc-fznZeY c4"
                    >
                      Due on
                    </div>
                    <div
                      className="sc-fznZeY c5"
                    >
                      Status
                    </div>
                    <div
                      className="sc-fznZeY c6"
                    >
                      Scores
                    </div>
                  </div>
                  <div
                    className="empty pending card"
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-spinner fa-w-16 fa-spin c7 ox-icon ox-icon-spinner"
                      data-icon="spinner"
                      data-prefix="fas"
                      data-variant="activity"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                     Preparing assignments for your course.  This can take up to 10 minutes.
                  </div>
                </div>
                <div
                  className="c8"
                >
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-exclamation-circle fa-w-16 c7 ox-icon ox-icon-exclamation-circle"
                        color="#f4d019"
                        data-icon="exclamation-circle"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                    </div>
                     
                    <span>
                      Due soon
                    </span>
                  </div>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-clock fa-w-16 c7 ox-icon ox-icon-clock"
                        color="#c2002f"
                        data-icon="clock"
                        data-prefix="far"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                    </div>
                     
                    <span>
                      Late work
                    </span>
                  </div>
                  <div>
                    <div>
                      <div
                        className="c9 extension-icon c10"
                      >
                        E
                      </div>
                    </div>
                     
                    <span>
                      Extension
                    </span>
                  </div>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        background="#5e5e5e"
                        className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                        color="white"
                        data-icon="star"
                        data-prefix="fas"
                        data-variant="circledStar"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                    </div>
                     
                    <span>
                      Provisional score. Final scores will be available when published by your instructor.
                    </span>
                  </div>
                </div>
                <div
                  className="upcoming card"
                >
                  <div
                    className="c1"
                  >
                    <div
                      className="sc-fznZeY c2"
                    >
                      <span
                        className="title"
                      >
                        Coming Up
                      </span>
                    </div>
                    <div
                      className="sc-fznZeY c4"
                    >
                      Due on
                    </div>
                    <div
                      className="sc-fznZeY c5"
                    >
                      Status
                    </div>
                    <div
                      className="sc-fznZeY c6"
                    >
                      Scores
                    </div>
                  </div>
                  <div
                    aria-label="Work on event: cutting-edge mesh portals"
                    className="c12 task event"
                    data-event-id={3}
                    href="/course/1/task/3"
                    tabIndex={-1}
                  >
                    <a
                      className="c13"
                      href="/course/1/task/3"
                      onClick={[Function]}
                    >
                      <div
                        className="sc-fznZeY c2"
                      >
                        <i
                          className="c14 icon-event"
                          type="event"
                        />
                        <span>
                          cutting-edge mesh portals
                        </span>
                      </div>
                      <div
                        className="sc-fznZeY c4"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Wed, Oct 14, 12:00am
                        </time>
                      </div>
                      <div
                        className="sc-fznZeY c5"
                      >
                        <div
                          className="c15"
                        >
                          <span
                            className="tour-anchor"
                            data-tour-anchor-id="assignment-progress-status"
                          >
                            
                          </span>
                        </div>
                      </div>
                    </a>
                    <div
                      className="sc-fznZeY c6"
                    >
                      <div
                        className="c15"
                      >
                        <a
                          href="/course/1/gradebook"
                          onClick={[Function]}
                        >
                          5.0
                        </a>
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-label="Work on external: open-source mesh partnerships"
                    className="c12 task external"
                    data-event-id={2}
                    href="/course/1/task/2"
                    tabIndex={-1}
                  >
                    <a
                      className="c13"
                      href="/course/1/task/2"
                      onClick={[Function]}
                    >
                      <div
                        className="sc-fznZeY c2"
                      >
                        <i
                          className="c14 icon-external"
                          type="external"
                        />
                        <span>
                          open-source mesh partnerships
                        </span>
                      </div>
                      <div
                        className="sc-fznZeY c4"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Wed, Oct 14, 12:00am
                        </time>
                      </div>
                      <div
                        className="sc-fznZeY c5"
                      >
                        <div
                          className="c15"
                        >
                          <span
                            className="tour-anchor"
                            data-tour-anchor-id="assignment-progress-status"
                          >
                            Not started
                          </span>
                        </div>
                      </div>
                    </a>
                    <div
                      className="sc-fznZeY c6"
                    >
                      <div
                        className="c15"
                      >
                        <a
                          href="/course/1/gradebook"
                          onClick={[Function]}
                        >
                          8.0
                        </a>
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-label="Work on homework: real-time synthesize interfaces"
                    className="c12 task homework"
                    data-event-id={4}
                    href="/course/1/task/4"
                    tabIndex={-1}
                  >
                    <a
                      className="c13"
                      href="/course/1/task/4"
                      onClick={[Function]}
                    >
                      <div
                        className="sc-fznZeY c2"
                      >
                        <i
                          className="c14 icon-homework"
                          type="homework"
                        />
                        <span>
                          real-time synthesize interfaces
                        </span>
                      </div>
                      <div
                        className="sc-fznZeY c4"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Wed, Oct 14, 12:00am
                        </time>
                      </div>
                      <div
                        className="sc-fznZeY c5"
                      >
                        <div
                          className="c15"
                        >
                          <span
                            className="tour-anchor"
                            data-tour-anchor-id="assignment-progress-status"
                          >
                            Complete
                          </span>
                        </div>
                      </div>
                    </a>
                    <div
                      className="sc-fznZeY c6"
                    >
                      <div
                        className="c15"
                      >
                        <a
                          href="/course/1/gradebook"
                          onClick={[Function]}
                        >
                          5.0
                        </a>
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-label="Work on reading: distributed integrate infomediaries"
                    className="c12 task reading"
                    data-event-id={1}
                    href="/course/1/task/1"
                    tabIndex={-1}
                  >
                    <a
                      className="c13"
                      href="/course/1/task/1"
                      onClick={[Function]}
                    >
                      <div
                        className="sc-fznZeY c2"
                      >
                        <i
                          className="c14 icon-reading"
                          type="reading"
                        />
                        <span>
                          distributed integrate infomediaries
                        </span>
                      </div>
                      <div
                        className="sc-fznZeY c4"
                      >
                        <time
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          Wed, Oct 14, 12:00am
                        </time>
                      </div>
                      <div
                        className="sc-fznZeY c5"
                      >
                        <div
                          className="c15"
                        >
                          <span
                            className="tour-anchor"
                            data-tour-anchor-id="assignment-progress-status"
                          >
                            In progress
                          </span>
                        </div>
                      </div>
                    </a>
                    <div
                      className="sc-fznZeY c6"
                    >
                      <div
                        className="c15"
                      >
                        <a
                          href="/course/1/gradebook"
                          onClick={[Function]}
                        >
                          0
                        </a>
                        <svg
                          aria-hidden="true"
                          background="#5e5e5e"
                          className="svg-inline--fa fa-star fa-w-18 c11 ox-icon ox-icon-star"
                          color="white"
                          data-icon="star"
                          data-prefix="fas"
                          data-variant="circledStar"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sidebar col-lg-3 col-12"
            >
              <div
                className="actions-box loadable is-loading"
              >
                Loading progress information...
              </div>
              <div
                className="actions-box browse-the-book card"
              >
                <a
                  aria-label="Browse course reference book"
                  className="browse-the-book"
                  data-appearance="testing"
                  href="/book/1"
                  onClick={[Function]}
                  target="_blank"
                >
                  <div>
                    Browse the Book
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: [teacher,teacher-not-previewed]; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;
